[project]
name = "rag"
version = "0.1.0"
description = "Simple RAG (Retrieval-Augmented Generation) tool for building and querying the knowledge base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chonkie[hub]>=1.0.10",
  "fire>=0.7.0",
  "mineru[core]>=2.0.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
]
